--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>SocialMedia</title>
   </head>
   <body class="dark">
-    <div id="root">
-    </div>
+    <div id="root"></div>
+      <div id="model"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
